--- a/src/components/navigation-sidebar/index.css
+++ b/src/components/navigation-sidebar/index.css
@@ -4,7 +4,10 @@
 
 .wd-component-outline {
     border-radius: 12px;
-    outline: 3px solid #D9D9D9;
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #c0c0bc;
+    background-color: #FEEEEF;
     height: 800px;
 }
 
