--- a/src/components/recipe-summary-list/index.css
+++ b/src/components/recipe-summary-list/index.css
@@ -7,7 +7,8 @@
 
 .wd-recipe-image {
     width:90%;
-    height:180px;
+    /*height:180px;*/
+    max-height: 180px;
     border-radius: 15px;
     object-fit: cover;
 }
@@ -26,11 +27,16 @@
     border-style: solid;
     border-width: 1px;
     border-color: #c0c0bc;
-    height: 280px;
+    /*height: 280px;*/
+    max-height: 280px;
     background-color:#ffffff;
 }
 
 .wd-nudge-up {
     bottom: 7px;
     left: 20px;
+}
+
+.wd-text-md {
+    font-size: small;
 }
