--- a/src/components/saved-recipes/index.css
+++ b/src/components/saved-recipes/index.css
@@ -1,3 +1,11 @@
+.wd-border {
+    border-radius: 12px;
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #c0c0bc;
+    height: 100%;
+}
+
 .wd-avatar {
     width:60px;
     height:60px;
