--- a/src/components/saved-recipes/index.css
+++ b/src/components/saved-recipes/index.css
@@ -13,30 +13,29 @@
     object-fit: cover;
 }
 
-.wd-recipe-image {
-    width:90%;
-    /*height:180px;*/
-    max-height: 180px;
+.wd-saved-recipe-image {
+    width:90px;
+    height: 60px;
     border-radius: 15px;
     object-fit: cover;
 }
 
-.wd-item-border {
+.wd-saved-item-border {
     border-radius: 15px;
     border-style: solid;
     border-width: 1px;
     border-color: #c0c0bc;
-    height: 340px;
+    height: 160px;
     background-color:#eae6e0;
 }
 
-.wd-item-content {
+.wd-saved-item-content {
     border-radius: 15px;
     border-style: solid;
     border-width: 1px;
     border-color: #c0c0bc;
     /*height: 280px;*/
-    max-height: 280px;
+    max-height: 100px;
     background-color:#ffffff;
 }
 
@@ -47,4 +46,8 @@
 
 .wd-text-md {
     font-size: small;
+}
+
+.wd-btn-align {
+    line-height: 2;
 }
