--- a/src/components/profile/index.css
+++ b/src/components/profile/index.css
@@ -18,7 +18,7 @@
 .wd-avatar {
     width: 90%;
     margin-right: 3px;
-    height: 150px;
+    height: 90%;
     border-radius: 20px;
 }
 
@@ -56,16 +56,13 @@
     font-size: 30px;
 }
 
-.wd-input-width {
-    width: 200px;
-}
 
 .wd-filter {
     filter: opacity(30%);
 }
 
-.wd-camera {
-    font-size: 50px;
-    background: transparent;
-    right: 60%;
-}
+/*.wd-camera {*/
+/*    font-size: 50px;*/
+/*    background: transparent;*/
+/*    right: 60%;*/
+/*}*/
