--- a/src/components/profile/index.css
+++ b/src/components/profile/index.css
@@ -16,9 +16,9 @@
 }
 
 .wd-avatar {
-    width: 90%;
+    width: 120px;
+    height: 120px;
     margin-right: 3px;
-    height: 90%;
     border-radius: 20px;
 }
 
