--- a/src/components/profile/index.css
+++ b/src/components/profile/index.css
@@ -34,6 +34,19 @@
     border: none;
 }
 
+.wd-edit-input {
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    font-weight: normal;
+    color: black;
+    border-radius: 10px;
+    border-color: #c0c0bc;
+    border-style: solid;
+    border-width: 1px;
+    padding: 5px;
+}
+
 .wd-bio {
     font-size: 18px;
     color: black;
@@ -57,9 +70,9 @@
 }
 
 
-.wd-filter {
-    filter: opacity(30%);
-}
+/*.wd-filter {*/
+/*    filter: opacity(30%);*/
+/*}*/
 
 /*.wd-camera {*/
 /*    font-size: 50px;*/
