--- a/src/components/profile/index.css
+++ b/src/components/profile/index.css
@@ -76,9 +76,27 @@
     object-fit: cover;
 }
 
+.wd-my-recipe-content {
+    border-radius: 15px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #c0c0bc;
+    height: 250px;
+    background-color:#F3F1EB;
+}
+
+.wd-inner-content {
+    border-radius: 15px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #c0c0bc;
+    height: 170px;
+    background-color:white;
+}
+
 .wd-my-recipe-image {
-    width:90px;
-    height: 60px;
+    width: 100%;
+    height: 140px;
     border-radius: 15px;
     object-fit: cover;
 }
