--- a/src/components/profile/index.css
+++ b/src/components/profile/index.css
@@ -54,8 +54,13 @@
     height: 300px;
 }
 
-.wd-text-sm {
+.wd-text-xs {
     font-size: 9px;
+    color: black;
+}
+
+.wd-text-sm {
+    font-size: 12px;
     color: black;
 }
 
