--- a/src/components/saved-recipes/index.css
+++ b/src/components/saved-recipes/index.css
@@ -35,7 +35,7 @@
     border-width: 1px;
     border-color: #c0c0bc;
     /*height: 280px;*/
-    max-height: 100px;
+    height: 100px;
     background-color:#ffffff;
 }
 
