--- a/src/components/profile/index.css
+++ b/src/components/profile/index.css
@@ -15,15 +15,14 @@
     height: 800px;
 }
 
-.wd-avatar {
-    width: 120px;
-    height: 120px;
-    margin-right: 3px;
+.wd-profile-avatar {
+    width: 100px;
+    height: 100px;
     border-radius: 20px;
 }
 
 .wd-profile-text {
-    font-size: 20px;
+    font-size: 18px;
     color: black;
 }
 
