--- a/src/components/spoonacular/index.css
+++ b/src/components/spoonacular/index.css
@@ -17,3 +17,21 @@
     border-radius: 15px;
     object-fit: cover;
 }
+
+.wd-border {
+    border-radius: 12px;
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #c0c0bc;
+}
+
+.wd-recipe-pic {
+    border-radius: 12px;
+    width: 305px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.wd-width-305 {
+    width: 305px;
+}
