--- a/src/components/create-recipe/index.css
+++ b/src/components/create-recipe/index.css
@@ -48,6 +48,14 @@
     width:100%;
 }
 
+.wd-pic-input {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 8px;
+    border-color: rgb(187, 182, 182);
+    padding: 5px;
+}
+
 .wd-sm-txt {
     font-weight: bold;
     font-size: 15px;
