--- a/src/components/recipe-summary-list/index.css
+++ b/src/components/recipe-summary-list/index.css
@@ -18,7 +18,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: #c0c0bc;
-    max-height: 340px;
+    max-height: 360px;
     background-color:#eae6e0;
 }
 
@@ -43,4 +43,8 @@
 
 .wd-link {
     text-decoration: none;
+}
+
+.wd-wrap {
+    overflow-wrap: break-word;
 }
