--- a/src/components/profile/index.css
+++ b/src/components/profile/index.css
@@ -1,6 +1,6 @@
-* {
-    outline: 1px solid red;
-}
+/** {*/
+/*    outline: 1px solid red;*/
+/*}*/
 
 .wd-profile-background {
     border-bottom-left-radius: 20px;
